Build basic HTML page with heading, paragraph, styled text, and table

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Introduction to the DOM Lab</title>
+    
   </head>
   <body>
     <h1>My HTML adventure</h1>
@@ -16,6 +17,7 @@
       markup to display in our <strong>browser</strong>. We're basically telling
       computers what to do. <em>Neat!</em>
     </p>
+     <script src="index.js"></script>
 
     <table>
       <thead>
